# stream_eddy_pusher

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  mainwindow.cpp  mainwindow.h  数据存储路径说明.md
Config/: users.json
communication/: communicationmanager.cpp  communicationmanager.h  protocol.h  serialmanager.cpp  serialmanager.h
core/: configmanager.cpp  configmanager.h  devicecontroller.cpp  devicecontroller.h  taskmanager.cpp  taskmanager.h  usermanager.cpp  usermanager.h
data/: datamanager.cpp  datamanager.h
ui/: autotaskwidget.cpp  autotaskwidget.h  connectionwidget.cpp  connectionwidget.h  logindialog.cpp  logindialog.h  logwidget.cpp  logwidget.h  manualcontrolwidget.cpp  manualcontrolwidget.h  settingsdialog.cpp  settingsdialog.h  statuswidget.cpp  statuswidget.h  taskconfigdialog.cpp  taskconfigdialog.h  taskconfigwidget.cpp  taskconfigwidget.h  tasksetupwidget.cpp  tasksetupwidget.h  usermanagementdialog.cpp  usermanagementdialog.h
utils/: displaycontext.cpp  displaycontext.h  geometryvalidator.cpp  geometryvalidator.h  layoutactivation.cpp  layoutactivation.h  logger.h  windowinitialization.cpp  windowinitialization.h
